--- a/index-START.html
+++ b/index-START.html
@@ -26,10 +26,35 @@
 
     function findMatches(wordToMatch, cities) {
       return cities.filter(place => {
-        const regx= new RegExp(wordToMatch)
-        return place.city.match()
-      })
+        const regx = new RegExp(wordToMatch, 'gi');
+        return place.city.match(regx) || place.state.match(regx);
+      });
     }
+
+    function numberWithCommas(x) {
+      return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+    };
+
+    function displayMatches() {
+      const matchArray = findMatches(this.value, cities);
+      const html = matchArray.map(place => {
+        const regx = new RegExp(this.value, 'gi');
+        const cityName = place.city.replace(regx, `<span class= "hl">${this.value}</span>`);
+        const stateName = place.state.replace(regx, `<span class="hl">${this.value}</span>`);
+        return `
+        <li>
+        <span class='name'>${cityName}, ${stateName}</span>
+        <span class='population'>${numberWithCommas(place.population)}</span>
+        </li>
+      `
+      }).join('');
+      suggestions.innerHTML = html;
+    }
+
+    const searchInput = document.querySelector(".search");
+    const suggestions = document.querySelector(".suggestions");
+    searchInput.addEventListener('change', displayMatches);
+    searchInput.addEventListener('keyup', displayMatches);
   </script>
 </body>
 
